--- a/client/src/styles/title.css
+++ b/client/src/styles/title.css
@@ -149,8 +149,8 @@ cursor: pointer;
     transform: scale(1.05);
   }
   .photos {
-    max-width: 100%; 
-    max-height: 100%; 
+    height: 70%;
+    width: 100%;
     object-fit: contain;
   } 
   h3 {
